// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render PageContent  -- ViewMode.FULL 1`] = `
<div
  className="page-content"
>
  <section
    className="catalog catalog--like-this"
  >
    <h2
      className="catalog__title"
    >
      More like this
    </h2>
    <div
      className="catalog__movies-list"
    >
      <article
        className="small-movie-card catalog__movies-card"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="small-movie-card__image"
        >
          <img
            alt="We Need To Talk About Kevin"
            height="175"
            src="img/we-need-to-talk-about-kevin.jpg"
            width="280"
          />
        </div>
        <h3
          className="small-movie-card__title"
        >
          <a
            className="small-movie-card__link"
            href="movie-page.html"
          >
            We Need To Talk About Kevin
          </a>
        </h3>
      </article>
    </div>
  </section>
  <footer
    className="page-footer"
  >
    <div
      className="logo"
    >
      <a
        className="logo__link logo__link--light"
      >
        <span
          className="logo__letter logo__letter--1"
        >
          W
        </span>
        <span
          className="logo__letter logo__letter--2"
        >
          T
        </span>
        <span
          className="logo__letter logo__letter--3"
        >
          W
        </span>
      </a>
    </div>
    <div
      className="copyright"
    >
      <p>
        © 2019 What to watch Ltd.
      </p>
    </div>
  </footer>
</div>
`;

exports[`Render PageContent -- ViewMode.MAIN 1`] = `
<div
  className="page-content"
>
  <section
    className="catalog"
  >
    <h2
      className="catalog__title visually-hidden"
    >
      Catalog
    </h2>
    <ul
      className="catalog__genres-list"
    >
      <li
        className="catalog__genres-item
            false"
        onClick={[Function]}
      >
        <a
          className="catalog__genres-link"
          href="#"
        >
          Все жанры
        </a>
      </li>
      <li
        className="catalog__genres-item
            false"
        onClick={[Function]}
      >
        <a
          className="catalog__genres-link"
          href="#"
        >
          Криминал
        </a>
      </li>
      <li
        className="catalog__genres-item
            false"
        onClick={[Function]}
      >
        <a
          className="catalog__genres-link"
          href="#"
        >
          Исторический
        </a>
      </li>
      <li
        className="catalog__genres-item
            catalog__genres-item--active"
        onClick={[Function]}
      >
        <a
          className="catalog__genres-link"
          href="#"
        >
          Триллер
        </a>
      </li>
      <li
        className="catalog__genres-item
            false"
        onClick={[Function]}
      >
        <a
          className="catalog__genres-link"
          href="#"
        >
          Короткометражный
        </a>
      </li>
      <li
        className="catalog__genres-item
            false"
        onClick={[Function]}
      >
        <a
          className="catalog__genres-link"
          href="#"
        >
          Мистика
        </a>
      </li>
      <li
        className="catalog__genres-item
            false"
        onClick={[Function]}
      >
        <a
          className="catalog__genres-link"
          href="#"
        >
          Вестерн
        </a>
      </li>
      <li
        className="catalog__genres-item
            false"
        onClick={[Function]}
      >
        <a
          className="catalog__genres-link"
          href="#"
        >
          Ужасы
        </a>
      </li>
      <li
        className="catalog__genres-item
            false"
        onClick={[Function]}
      >
        <a
          className="catalog__genres-link"
          href="#"
        >
          Спорт
        </a>
      </li>
    </ul>
    <div
      className="catalog__movies-list"
    />
    <div
      className="catalog__more"
    >
      <button
        className="catalog__button"
        type="button"
      >
        Show more
      </button>
    </div>
  </section>
  <footer
    className="page-footer"
  >
    <div
      className="logo"
    >
      <a
        className="logo__link logo__link--light"
      >
        <span
          className="logo__letter logo__letter--1"
        >
          W
        </span>
        <span
          className="logo__letter logo__letter--2"
        >
          T
        </span>
        <span
          className="logo__letter logo__letter--3"
        >
          W
        </span>
      </a>
    </div>
    <div
      className="copyright"
    >
      <p>
        © 2019 What to watch Ltd.
      </p>
    </div>
  </footer>
</div>
`;
